<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/profile" />

        </FrameLayout>

        <TextView
            style="@style/detail_text.title"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/data_diri"
            android:textSize="20sp" />

        <TableLayout
            style="@style/detail_text"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/detail_text.contextTitle"
                    android:text="@string/name"
                    android:textSize="16sp" />

                <TextView
                    style="@style/detail_text.context"
                    android:text="@string/myName"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/detail_text.contextTitle"
                    android:text="@string/email"
                    android:textSize="16sp" />

                <TextView
                    style="@style/detail_text.context"
                    android:text="@string/myEmail"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>